--- a/InfoApp/app/src/main/res/values/styles.xml
+++ b/InfoApp/app/src/main/res/values/styles.xml
@@ -7,4 +7,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TextStyle">
+        <item name="android:text">@string/search</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 </resources>
