--- a/InfoApp/app/src/main/res/layout/activity_main.xml
+++ b/InfoApp/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
+            android:text="@string/search"
             android:background="@drawable/button"
-            style="@style/TextStyle"
-            android:onClick="search"/>
+            style="@style/TextStyle"/>
     </LinearLayout>
 
     <androidx.viewpager.widget.ViewPager
