--- a/InfoApp/app/src/main/res/menu/navigation.xml
+++ b/InfoApp/app/src/main/res/menu/navigation.xml
@@ -18,7 +18,7 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/person"
+        android:icon="@drawable/home"
         android:title="@string/person"/>
 
 </menu>
