--- a/InfoApp/app/src/main/res/layout/activity_main.xml
+++ b/InfoApp/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.cuc.infoapp.view.Activity.MainActivity">
+    tools:context="com.cuc.infoapp.view.activity.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
