--- a/InfoApp/app/src/main/res/layout/comment_item.xml
+++ b/InfoApp/app/src/main/res/layout/comment_item.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/commentLayout"
     android:layout_margin="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,8 +14,8 @@
         android:layout_height="60dp"
         android:background="@drawable/avatar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/person1" />
+        app:layout_constraintTop_toTopOf="parent" />
+        <!-- app:srcCompat="@drawable/person1"-->
 
     <TextView
         android:id="@+id/textView"
