--- a/InfoApp/app/src/main/res/layout/item_news.xml
+++ b/InfoApp/app/src/main/res/layout/item_news.xml
@@ -8,8 +8,7 @@
     android:layout_height="wrap_content"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:paddingTop="10dp"
-    android:onClick="clickNew">
+    android:paddingTop="10dp">
 
 
     <ImageView
