--- a/InfoApp/app/src/main/res/layout/chattingrobot_main.xml
+++ b/InfoApp/app/src/main/res/layout/chattingrobot_main.xml
@@ -7,19 +7,19 @@
     android:layout_height="match_parent"
     android:background="#d8e0e8" >
     <TextView
-        android:id="@+id/RobotTitle"
+        android:id="@+id/robot_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="  Chatting Robot"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:layout_gravity="center_horizontal"
         android:textStyle="bold"
         />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1" />
 
 
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <EditText
-            android:id="@+id/inputText"
+            android:id="@+id/input_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
