--- a/InfoApp/app/src/main/res/values/styles.xml
+++ b/InfoApp/app/src/main/res/values/styles.xml
@@ -15,4 +15,9 @@
         <item name="android:background">@drawable/star</item>
         <item name="android:button">@null</item>
     </style>
+    <style name="robot">
+        <item name="android:background">@drawable/robot</item>
+        <item name="android:button">@null</item>
+
+    </style>
 </resources>
