--- a/InfoApp/app/src/main/res/layout/home_main.xml
+++ b/InfoApp/app/src/main/res/layout/home_main.xml
@@ -34,12 +34,12 @@
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="my favorate movies"
+    android:text="my favorite movies"
     android:textSize="30sp"
     android:gravity="center"/>
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"/>
+        android:layout_height="1dp" />
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
