--- a/InfoApp/app/src/main/res/layout/future_weather.xml
+++ b/InfoApp/app/src/main/res/layout/future_weather.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/futureWeatherItem"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center">
     <TextView
+        android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
     <TextView
+        android:id="@+id/temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
     <ImageView
+        android:id="@+id/weatherIcon"
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:src="@drawable/weather"
