--- a/InfoApp/app/src/main/res/layout/news_or_movies.xml
+++ b/InfoApp/app/src/main/res/layout/news_or_movies.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<cn.bingoogolapple.refreshlayout.BGARefreshLayout
+<!--cn.bingoogolapple.refreshlayout.BGARefreshLayout-->
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/itemsRefresh"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/search_box"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/accept_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:text="@string/search"
+            android:background="@drawable/button"
+            style="@style/TextStyle"/>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/itemsRecyclerView"
@@ -12,4 +34,4 @@
         android:layout_weight="1" />
 
 
-</cn.bingoogolapple.refreshlayout.BGARefreshLayout>
+</LinearLayout>
