--- a/InfoApp/app/src/main/res/layout/movie_basic_information.xml
+++ b/InfoApp/app/src/main/res/layout/movie_basic_information.xml
@@ -12,7 +12,7 @@
         <!--  电影海报  -->
         <ImageView
             android:id="@+id/moviePoster"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             app:layout_constraintStart_toStartOf="parent"
