添加GPS定位，修改部分布局

--- a/InfoApp/app/src/main/res/layout/activity_main.xml
+++ b/InfoApp/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,20 +8,34 @@
     android:orientation="vertical"
     tools:context="com.cuc.infoapp.view.activity.MainActivity">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNvigationView"
+        android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#1F86B5"
+        android:layout_alignParentBottom="true"
         app:itemIconSize="50dp"
         app:itemIconTint="#EAEAEA"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/navigation"/>
 
-</LinearLayout>
+    <TextView
+        android:background="#80FFFFFF"
+        android:id="@+id/locationTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/bottomNavigationView" />
+</RelativeLayout>
