--- a/InfoApp/app/src/main/res/layout/home_main.xml
+++ b/InfoApp/app/src/main/res/layout/home_main.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal"
         tools:ignore="UseCompoundDrawables">
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:src="@drawable/person1"
             android:id="@+id/head_portrait" />
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/account"
-            android:textSize="30sp" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
@@ -45,12 +45,14 @@
         android:id="@+id/favorate_movie"/>
 
 <!--com.github.clans.fab.FloatingActionButton-->
-    <ImageView
-        android:id="@+id/button_robot"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/robot"
-        style="@style/robot"/>
+        <ImageView
+            android:id="@+id/button_robot"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/robot"
+            android:layout_gravity="end"
+            android:layout_margin="5dp"
+            style="@style/robot"/>
 
 
 </LinearLayout>
