--- a/InfoApp/app/src/main/res/layout/item_news.xml
+++ b/InfoApp/app/src/main/res/layout/item_news.xml
@@ -6,6 +6,7 @@
     android:id="@+id/newsItemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="5dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingTop="10dp">
@@ -61,7 +62,7 @@
         android:textSize="12sp"
         android:text="2020-12-05 19:05"
         app:layout_constraintBottom_toBottomOf="@id/newsImage"
-        app:layout_constraintLeft_toLeftOf="@id/newsAuthor"
+        app:layout_constraintLeft_toRightOf="@id/newsAuthor"
         app:layout_constraintRight_toLeftOf="@id/newsImage"/>
 
     <View
