--- a/InfoApp/app/src/main/res/layout/movie_basic_information.xml
+++ b/InfoApp/app/src/main/res/layout/movie_basic_information.xml
@@ -28,7 +28,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:text="MovieTitle"
-            android:textSize="30sp"
+            android:textSize="25sp"
             app:layout_constraintStart_toEndOf="@+id/moviePoster"
             app:layout_constraintTop_toTopOf="@+id/moviePoster"
             tools:ignore="MissingConstraints" />
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="MovieType"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:layout_margin="10dp"
             app:layout_constraintTop_toBottomOf="@+id/movieTitle"
             app:layout_constraintStart_toEndOf="@+id/moviePoster" />
@@ -60,7 +60,7 @@
             android:id="@+id/movieScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="MovieScore"
+            android:text="9.7"
             app:layout_constraintBottom_toBottomOf="@+id/checkStar"
             app:layout_constraintStart_toStartOf="@+id/moviePoster"
             app:layout_constraintTop_toBottomOf="@+id/moviePoster"
