--- a/InfoApp/app/src/main/res/layout/today_weather.xml
+++ b/InfoApp/app/src/main/res/layout/today_weather.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="City"
-            android:textSize="30sp"
+            android:textSize="10sp"
             android:layout_weight="1"/>
 
         <TextView
@@ -26,7 +26,8 @@
             android:layout_height="wrap_content"
             android:text="TextView"
             android:layout_margin="20dp"
-            android:textSize="40sp"
+            android:textSize="20sp"
+            android:gravity="center"
             android:textStyle="bold"
             android:layout_weight="5"/>
 
