--- a/InfoApp/app/src/main/res/layout/chattingrobot_main.xml
+++ b/InfoApp/app/src/main/res/layout/chattingrobot_main.xml
@@ -10,9 +10,9 @@
         android:id="@+id/robot_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="  Chatting Robot"
-        android:textSize="50sp"
-        android:layout_gravity="center_horizontal"
+        android:text="Chatting Robot"
+        android:textSize="40sp"
+        android:gravity="center"
         android:textStyle="bold"
         />
 
