冀佳璐的聊天机器人功能完善

--- a/InfoApp/app/src/main/res/layout/chattingrobot_left_item.xml
+++ b/InfoApp/app/src/main/res/layout/chattingrobot_left_item.xml
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dp">
-
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:background="@drawable/message_left_original" >
+        android:background="@drawable/message_left_original"
+        android:gravity="center_horizontal"
+        tools:ignore="ExtraText,UselessParent"
+        android:id="@+id/imageleft"
+        android:layout_toRightOf="@id/personleft">
+
         <TextView
             android:id="@+id/leftMsg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="10dp"
-            android:textColor="#fff" />
-    </LinearLayout>
+            android:textColor="#fff"
+            tools:ignore="RelativeOverlap" />
+<!--        //android:layout_gravity="center_horizontal"-->
+<!--        //android:layout_margin="10dp"-->
 
-</FrameLayout>
+
+    </LinearLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/person"
+        android:id="@+id/personleft" />
+</RelativeLayout>
