--- a/InfoApp/app/src/main/res/layout/performer_item.xml
+++ b/InfoApp/app/src/main/res/layout/performer_item.xml
@@ -10,6 +10,9 @@
         android:id="@+id/performerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:text="performerName"/>
 </LinearLayout>
