--- a/InfoApp/app/src/main/res/layout/future_weather.xml
+++ b/InfoApp/app/src/main/res/layout/future_weather.xml
@@ -1,25 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/futureWeatherItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:gravity="center">
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="2dp"
+    android:layout_marginTop="2dp"
+    android:gravity="center"
+    android:background="#80FFFFFF"
+    android:orientation="horizontal">
+
     <TextView
-        android:id="@+id/date"
+        android:id="@+id/futureDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:text="date" />
+
     <TextView
-        android:id="@+id/temperature"
+        android:id="@+id/futureTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
-    <ImageView
-        android:id="@+id/weatherIcon"
-        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="futureTemperature" />
+
+    <TextView
+        android:id="@+id/futureWeatherInfo"
+        android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:src="@drawable/weather"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="futureWeatherInfo" />
+    <!--    <ImageView-->
+    <!--        android:id="@+id/futureIcon"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="60dp"-->
+    <!--        android:src="@drawable/weather"-->
+    <!--        android:layout_weight="1"/>-->
 </LinearLayout>
