--- a/InfoApp/app/src/main/res/layout/today_weather.xml
+++ b/InfoApp/app/src/main/res/layout/today_weather.xml
@@ -3,39 +3,69 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"
+    android:gravity="center"
+    android:layout_margin="5dp"
+    android:background="#95FFFFFF"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/todayWeather"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_margin="10dp">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/currentTemperature"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="40sp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_weight="2"
+                android:text="0°C"/>
+            <TextView
+                android:id="@+id/todayTemperature"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:layout_margin="20dp"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_weight="1"/>
+        </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1">
         <TextView
+            android:id="@+id/city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="City"
-            android:textSize="10sp"
-            android:layout_weight="1"/>
-
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:gravity="center"/>
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/otherInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:layout_margin="20dp"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:layout_weight="5"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/weather"
+            android:layout_gravity="center"
+            android:text="otherInfo"
             android:layout_weight="1"/>
+
+    </LinearLayout>
 
     </LinearLayout>
 </LinearLayout>
