--- a/InfoApp/app/src/main/res/layout/weather_content.xml
+++ b/InfoApp/app/src/main/res/layout/weather_content.xml
@@ -3,27 +3,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#C1D9EC"
     android:orientation="vertical">
 
     <!--  今日天气  -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-        <include layout="@layout/today_weather"/>
-    </LinearLayout>
+    <include layout="@layout/today_weather"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_margin="10dp"
-        android:background="#535353"/>
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="2dp"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:background="#535353"/>-->
 
     <!--  未来7天天气  -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/futureWeatherRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"/>
+        android:layout_weight="4"/>
 
 </LinearLayout>
