--- a/InfoApp/app/src/main/res/layout/chattingrobot_right_item.xml
+++ b/InfoApp/app/src/main/res/layout/chattingrobot_right_item.xml
@@ -25,7 +25,7 @@ android:layout_height="wrap_content" android:gravity="right">
             android:id="@+id/rightMsg"
             android:layout_width="match_parent"
             android:layout_height="33dp"
-            android:textColor="#fff"
+            android:textColor="#000"
             tools:ignore="RelativeOverlap" />
 
 </LinearLayout>
