--- a/InfoApp/app/src/main/res/layout/news_or_movies.xml
+++ b/InfoApp/app/src/main/res/layout/news_or_movies.xml
@@ -12,11 +12,14 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:orientation="horizontal">
+
         <EditText
             android:id="@+id/search_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:background="@drawable/edit_bg" />
+
         <Button
             android:id="@+id/accept_search"
             android:layout_width="match_parent"
