--- a/InfoApp/app/src/main/res/layout/weather_content.xml
+++ b/InfoApp/app/src/main/res/layout/weather_content.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/weather"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C1D9EC"
     android:orientation="vertical">
-
+<!--    &lt;!&ndash;   定位图标   &ndash;&gt;-->
+<!--    <ImageButton-->
+<!--        android:id="@+id/locate"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@drawable/movie"-->
+<!--        android:onClick="onClick"/>-->
     <!--  今日天气  -->
     <include layout="@layout/today_weather"/>
 
