--- a/InfoApp/app/src/main/res/layout/activity_main.xml
+++ b/InfoApp/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,10 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:background="#1F86B5"
         android:layout_alignParentBottom="true"
-        app:itemIconSize="50dp"
+        app:itemIconSize="40dp"
         app:itemIconTint="#EAEAEA"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/navigation"/>
