--- a/InfoApp/app/src/main/res/layout/future_weather.xml
+++ b/InfoApp/app/src/main/res/layout/future_weather.xml
@@ -1,39 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/futureWeatherItem"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_marginBottom="2dp"
     android:layout_marginTop="2dp"
+    android:padding="2dp"
     android:gravity="center"
-    android:background="#80FFFFFF"
+    android:background="#70FFFFFF"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/futureDate"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:text="date" />
+        android:text="@string/date" />
 
     <TextView
         android:id="@+id/futureTemperature"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:gravity="center"
-        android:text="futureTemperature" />
+        android:layout_weight="1"
+        android:text="@string/futuretemperature" />
 
     <TextView
         android:id="@+id/futureWeatherInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="futureWeatherInfo" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:gravity="right"
+        android:text="@string/futureweatherinfo"
+        tools:ignore="RtlHardcoded" />
     <!--    <ImageView-->
     <!--        android:id="@+id/futureIcon"-->
     <!--        android:layout_width="0dp"-->
