--- a/InfoApp/app/src/main/res/layout/item_news.xml
+++ b/InfoApp/app/src/main/res/layout/item_news.xml
@@ -14,7 +14,7 @@
     <ImageView
         android:id="@+id/newsImage"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:scaleType="centerCrop"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintRight_toRightOf="parent"
@@ -30,8 +30,8 @@
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="#333333"
-        android:textSize="18sp"
-        app:layout_constraintHorizontal_weight="2"
+        style="@style/BodyTitle"
+        app:layout_constraintHorizontal_weight="3"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintRight_toLeftOf="@id/newsImage"
         app:layout_constraintTop_toTopOf="parent"
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:textColor="#888888"
-        android:textSize="12sp"
+        style="@style/Explanation"
         android:text="腾讯娱乐"
         app:layout_constraintBottom_toBottomOf="@id/newsImage"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:textColor="#888888"
-        android:textSize="12sp"
+        style="@style/Explanation"
         android:text="2020-12-05 19:05"
         app:layout_constraintBottom_toBottomOf="@id/newsImage"
         app:layout_constraintLeft_toRightOf="@id/newsAuthor"
